# serializer version: 1
# name: test_exception_summary
  '''
  1 future(s) did not return a result:
  
  * HostInfo(connection_info=ConnectionInfo(host='127.0.0.1', port=9000), shard_num=1, replica_num=1, host_cluster_type='online', host_cluster_role='data'): ServerException("DB::Exception: Syntax error: failed at position 1 (invalid): invalid query. Expected one of: Query, Query with output, EXPLAIN, EXPLAIN, SELECT query, possibly with UNION, list of union elements, SELECT query, subquery, possibly with UNION...
  '''
# ---
# name: test_exception_summary.1
  '''
  1 future(s) did not return a result:
  
  * HostInfo(connection_info=ConnectionInfo(host='127.0.0.1', port=9000), shard_num=1, replica_num=1, host_cluster_type='online', host_cluster_role='data'): ServerException('DB::Exception: Table posthog_test.invalid_table_name does not exist. Stack trace:\n\n0. DB::Exception::Exception(DB::Exception::MessageMasked&&, int, bool) @ 0x0000000000000000\n1. DB::Exception::Exception(String&&, int, String, bool) @ 0x...
  '''
# ---
# name: test_exception_summary.2
  '''
  1 future(s) did not return a result:
  
  * HostInfo(connection_info=ConnectionInfo(host='127.0.0.1', port=9000), shard_num=1, replica_num=1, host_cluster_type='online', host_cluster_role='data'): ValueError('custom error')
  '''
# ---
